--- a/buzsaki_lab_to_nwb/metafile.yml
+++ b/buzsaki_lab_to_nwb/metafile.yml
@@ -3,7 +3,7 @@ NWBFile:
   experiment_description: ADDME
   experimenter: Experimenter
   identifier: ABC123
-  institution: University
+  institution: NYU
   keywords:
   - ''
   lab: Buzsaki lab
@@ -11,10 +11,9 @@ NWBFile:
   pharmacology: ''
   protocol: ''
   related_publications: ''
-  session_description: session_description
+  session_description: ''
   session_id: ''
   session_start_time: 2018-08-09 10:00:00
   slices: ''
   stimulus_notes: ''
   surgery: ''
-  virus: ''
