--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ pynwb==1.4.0
 tqdm==4.60.0
 numpy==1.19.3
 pandas==1.2.3
-scipy==1.4.1
-h5py==2.10.0
+scipy==1.7.1
+h5py==3.4.0
 hdf5storage==0.1.18
 PyYAML==5.4
 jsonschema==3.2.0
@@ -15,3 +15,5 @@ spiketoolkit==0.7.5
 neo==0.9.0
 roiextractors==0.3.1
 nwb-conversion-tools==0.9.3
+mat4py==0.5.0
+mat73==0.52
