PR updates and parallelization

--- a/buzsaki_lab_to_nwb/yuta_code_visual_cortex/metadata.yml
+++ b/buzsaki_lab_to_nwb/yuta_code_visual_cortex/metadata.yml
@@ -15,6 +15,8 @@ NWBFile:
     LFPs and single-neuron interactions with laminar structure in V1.
   institution: NYU
   lab: Buzsaki
+  experimenter:
+    - Yuta Senzai
 Subject:
   species: Mus musculus
   sex: M
