--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -19,11 +19,10 @@ jobs:
     - name: Install pip
       run: |
         python -m pip install --upgrade pip
+        pip3 install packaging
     - name: Install package
-      run: |
-        pip install -e .
+      run: pip install -e .
     - name: Test module load
       uses: jannekem/run-python-script-action@v1
       with:
-        script: |
-          import buzsaki_lab_to_nwb
+        script: import buzsaki_lab_to_nwb
