--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 pynwb==1.4.0
 tqdm==4.60.0
 numpy==1.19.3
@@ -10,10 +11,7 @@ jsonschema==3.2.0
 psutil==5.8.0
 lxml==4.6.5
 spikeextractors==0.9.7
-spikesorters==0.4.4
-spiketoolkit==0.7.5
 neo==0.9.0
-roiextractors==0.3.1
-git+https://github.com/catalystneuro/nwb-conversion-tools.git@55dc42853e3204b560f8e44b149ab0508e36852f
 mat4py==0.5.0
 mat73==0.52
+nwb-conversion-tools @ git+https://github.com/catalystneuro/nwb-conversion-tools.git@55dc42853e3204b560f8e44b149ab0508e36852f
