--- a/tingley_metabolic_environment.yml
+++ b/tingley_metabolic_environment.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
 - python==3.9
 - pip
+- git
 - pip:
   - -e .
-  - -r tingley_long_term_requirements.txt
+  - -r buzsaki_lab_to_nwb/tingley_long_term/tingley_long_term_requirements.txt
