--- a/buzsaki_lab_to_nwb/tingley_metabolic/tingley_metabolic_metadata.yml
+++ b/buzsaki_lab_to_nwb/tingley_metabolic/tingley_metabolic_metadata.yml
@@ -1,6 +1,5 @@
 NWBFile:
-  related_publications: 
-    "Transformation of a spatial map across the hippocampal-lateral septal circuit." Neuron 98.6 (2018) 1229-1242.
+  related_publications: "Transformation of a spatial map across the hippocampal-lateral septal circuit. Neuron 98.6 (2018) 1229-1242."
   lab: "Buzsáki"
   experimenter:
     - "Author: Tingley, David"
