--- a/buzsaki_lab_to_nwb/tingley_metabolic/tingley_metabolic_subject_info.yml
+++ b/buzsaki_lab_to_nwb/tingley_metabolic/tingley_metabolic_subject_info.yml
@@ -1,45 +1,45 @@
 CGM1: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'."
-CGM2: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'.""
-CGM3: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'.""
-CGM4: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'.""
-CGM5: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'.""
-CGM6: "Experiment condition 'ripple/glucose recording' with surgery condition 'bilat rCA1'.""
+CGM2: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'."
+CGM3: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'."
+CGM4: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'."
+CGM5: "Experiment condition 'ripple/glucose recording' with surgery condition 'rCA1'."
+CGM6: "Experiment condition 'ripple/glucose recording' with surgery condition 'bilat rCA1'."
 CGM7: "Experiment condition 'ripple/glucose recording' with surgery condition 'rHypothalamus & rCA1'."
 CGM8: "Experiment condition 'ripple/glucose recording' with surgery condition 'rHypothalamus & rCA1'."
-CGM9: "Experiment condition 'ripple/glucose recording' with surgery condition 'flex probe in rCA1'.""
-CGM10: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM11: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM12: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM13: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM14: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM15: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
-CGM16: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'.""
+CGM9: "Experiment condition 'ripple/glucose recording' with surgery condition 'flex probe in rCA1'."
+CGM10: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM11: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM12: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM13: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM14: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM15: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
+CGM16: "Experiment condition 'Opto stim' with surgery condition 'bilat CA3 CaMKII-ChR2'."
 CGM17: "Experiment condition 'dorsal/ventral' with no surgery condition."
-CGM18: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM19: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM20: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM21: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'.""
-CGM22: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'.""
-CGM23: "Experiment condition 'dorsal/ventral' with surgery condition 'dorsal/ventral probe implant'.""
-CGM24: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM25: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM26: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM27: "Experiment condition 'DREADDS' with surgery condition 'LS injected'.""
-CGM28: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'.""
-CGM29: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'.""
-CGM30: "Experiment condition 'DREADDS' surgery condition 'MS injected'.""
-CGM31: "Experiment condition 'dorsal/ventral' surgery condition 'dorsal/ventral probe implant'.""
-CGM32: "Experiment condition 'DREADDS' surgery condition 'MS injected'.""
-CGM33: "Experiment condition 'dorsal/ventral' surgery condition 'dorsal/ventral probe implant'.""
-CGM34: "Experiment condition 'DREADDS' surgery condition 'PPC injected'.""
-CGM35: "Experiment condition 'DREADDS' surgery condition 'PPC injected'.""
-CGM36: "Experiment condition 'DREADDS' surgery condition 'PPC injected'.""
-CGM37: "Experiment condition 'DREADDS' surgery condition 'PPC injected'.""
-CGM38: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'.""
-CGM39: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'.""
-CGM40: "Experiment condition 'DREADDS' surgery condition 'MS injected'.""
-CGM41: "Experiment condition 'DREADDS' surgery condition 'PPC injected'.""
-CGM42: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'.""
-CGM43: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'.""
-CGM44: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'.""
-CGM45: "Experiment condition 'ripple/glucose recording' with surgery condition 'PPC injected'.""
+CGM18: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM19: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM20: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM21: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'."
+CGM22: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'."
+CGM23: "Experiment condition 'dorsal/ventral' with surgery condition 'dorsal/ventral probe implant'."
+CGM24: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM25: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM26: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM27: "Experiment condition 'DREADDS' with surgery condition 'LS injected'."
+CGM28: "Experiment condition 'PPC opto stim' with surgery condition 'PPC injected'."
+CGM29: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'."
+CGM30: "Experiment condition 'DREADDS' surgery condition 'MS injected'."
+CGM31: "Experiment condition 'dorsal/ventral' surgery condition 'dorsal/ventral probe implant'."
+CGM32: "Experiment condition 'DREADDS' surgery condition 'MS injected'."
+CGM33: "Experiment condition 'dorsal/ventral' surgery condition 'dorsal/ventral probe implant'."
+CGM34: "Experiment condition 'DREADDS' surgery condition 'PPC injected'."
+CGM35: "Experiment condition 'DREADDS' surgery condition 'PPC injected'."
+CGM36: "Experiment condition 'DREADDS' surgery condition 'PPC injected'."
+CGM37: "Experiment condition 'DREADDS' surgery condition 'PPC injected'."
+CGM38: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'."
+CGM39: "Experiment condition 'PPC opto stim' surgery condition 'PPC injected'."
+CGM40: "Experiment condition 'DREADDS' surgery condition 'MS injected'."
+CGM41: "Experiment condition 'DREADDS' surgery condition 'PPC injected'."
+CGM42: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'."
+CGM43: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'."
+CGM44: "Experiment condition 'DREADDS' with surgery condition 'PPC injected'."
+CGM45: "Experiment condition 'ripple/glucose recording' with surgery condition 'PPC injected'."
