--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -1,5 +1,6 @@
 name: Installation
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 0 1 * *"
 
@@ -12,12 +13,12 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow --tags
     - name: Setup Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: "3.10"
     - name: Install pip
       run: |
         python -m pip install --upgrade pip
@@ -25,6 +26,4 @@ jobs:
     - name: Install package
       run: pip install -e .
     - name: Test module load
-      uses: jannekem/run-python-script-action@v1
-      with:
-        script: import buzsaki_lab_to_nwb
+      run: python -c "import buzsaki_lab_to_nwb"
