Add basic metadata to conversion. Still must account for nested values

--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/metadata.yml
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/metadata.yml
@@ -26,3 +26,7 @@ NWBFile:
     Overall, the wiring and functional features of CA1 pyramidal neurons reflected a combination of birthdate and the 
     rate of neurogenesis. These observations demonstrate that sequential neurogenesis during embryonic development 
     shapes the preconfigured forms of adult network dynamics.
+
+
+Subject:
+  species: Mus musculus
