add session start time for movie

--- a/buzsaki_lab_to_nwb/valero/metadata.yml
+++ b/buzsaki_lab_to_nwb/valero/metadata.yml
@@ -27,3 +27,8 @@ NWBFile:
 Subject:
   species: Mus musculus
   age: 30-50 weeks
+# Ecephys:
+#   Device:
+#     - name: Neurolight probe
+#     - description: N1-F21-O36/18 (Chronic)
+#     - manufacturer: Neurolight
