--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/requirements.txt
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/requirements.txt
@@ -1,5 +1,5 @@
 hdf5storage>=0.1.18
-neuroconv>=0.3.0
+neuroconv @ git+https://github.com/catalystneuro/neuroconv.git@main
 pymatreader==0.0.31
 ndx-events==0.2.0
 spikeinterface==0.97.1
